--- a/rag/reranking.html
+++ b/rag/reranking.html
@@ -225,14 +225,16 @@
 </body>
 </main>
 
-    
+ 
 <footer class="page__meta">
-  </footer>
+  <!-- Any additional metadata or footer information goes here -->
+</footer>
 
 <div class="page__footer">
-  <footer>
-        <p>@2025 Margi Pandya</p>
-  </footer>
+  <footer>
+    <!-- Your footer content goes here -->
+    <p>@2025 Margi Pandya</p>
+  </footer>
 </div>
 
 </body>
