--- a/rag/reranking.html
+++ b/rag/reranking.html
@@ -7,6 +7,14 @@
   <link rel="stylesheet" href="../styles.css">
   <script src="https://polyfill.io/v3/polyfill.min.js?features=es6"></script>
   <script id="MathJax-script" async src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"></script>
+
+  <style>
+    /* 🔥 Fix paragraph spacing */
+    p {
+      margin-top: 0;
+      margin-bottom: 12px; /* adjust this as you like */
+    }
+  </style>
 </head>
 <body>
   <!-- Top Navigation Bar -->
@@ -34,20 +42,20 @@
       </div>
     </div>
   </div>
-<div class="page-content" style="display: flex; flex-direction: row; max-width: 1300px; margin: 0 auto; padding: 20px;">
-  <!-- Sidebar -->
-  <div class="sidebar sticky" style="width: 300px; padding: 20px;">
-    <div class="mainnotes-sidebar">
-      <h3>Main Notes</h3>
-      <ul>
-          <li><a href="https://margipandya27.github.io/MargiPandya/deep_gen/vae.html">Deep Generative Models</a></li>
+
+  <div class="page-content" style="display: flex; flex-direction: row; max-width: 1300px; margin: 0 auto; padding: 20px;">
+    <!-- Sidebar -->
+    <div class="sidebar sticky" style="width: 300px; padding: 20px;">
+      <div class="mainnotes-sidebar">
+        <h3>Main Notes</h3>
+        <ul>
+          <li><a href="">Deep Generative Models</a></li>
           <li><a href="agents.html">Agents</a></li>
           <li><a href="https://margipandya27.github.io/MargiPandya/rag/naive_rag.html">RAGs</a></li>
-          <!-- Add more links as needed -->
-      </ul>
+        </ul>
+      </div>
     </div>
-  </div>
-      
+    
     <main style="flex: 1; padding: 20px; max-width: 1000px;">
      <body>
     <article class="container">
