--- a/rag/reranking.html
+++ b/rag/reranking.html
@@ -35,9 +35,8 @@
     </div>
   </div>
   
-<div class="page-content" style="display: flex; flex-direction: row; max-width: 1300px; margin: 0 auto; padding: 20px;">
-    <!-- Sidebar -->
-    <div class="sidebar sticky" style="width: 300px; padding: 20px;">
+<div class="page-content">
+  <aside class="sidebar sticky">
       <div class="mainnotes-sidebar">
         <h3>Content</h3>
         <ul>
@@ -51,7 +50,7 @@
       </div>
     </div>
     
-    <main style="flex: 1; padding: 20px; max-width: 1000px;">
+    <main class="content">
    
         <h1>Does Re-ranking Improve the Performance of RAG?</h1>
         <p>
