--- a/rag/reranking.html
+++ b/rag/reranking.html
@@ -50,7 +50,7 @@
           <li><a href="#rankgpt">RankGPT</a></li>
         </ul>
       </div>
-    </aside>
+<!--     </aside> -->
     
     <!-- Main Content -->
     <main style="flex: 1; padding: 20px; max-width: 1000px;">
