--- a/rag/reranking.html
+++ b/rag/reranking.html
@@ -36,12 +36,11 @@
   </div>
   
   <div class="page-content" style="display: flex; flex-direction: row; max-width: 1300px; margin: 0 auto; padding: 20px;">
+  <!-- Sidebar -->
   <div class="sidebar sticky" style="width: 300px; padding: 20px;">
-    <!-- Sidebar -->
-<!--     <aside class="sidebar sticky"> -->
-      <div class="mainnotes-sidebar">
-        <h3>Content</h3>
-        <ul>
+    <div class="mainnotes-sidebar">
+      <h3>Content</h3>
+      <ul>
           <li><a href="#classical-rag">Classical RAG</a></li>
           <li><a href="#re-ranking-models">With Re-ranking Models</a></li>
           <li><a href="#types-of-re-ranking-models">Types of Re-ranking Models</a></li>
@@ -50,6 +49,7 @@
           <li><a href="#rankgpt">RankGPT</a></li>
         </ul>
       </div>
+    </div>
 <!--     </aside> -->
     
     <!-- Main Content -->
