--- a/rag/reranking.html
+++ b/rag/reranking.html
@@ -59,7 +59,7 @@
         Yes, re-ranking is a crucial step that can significantly improve the performance of a Retrieval-Augmented Generation (RAG) system. While the initial retrieval stage fetches a broad set of documents, the re-ranking stage refines this set, ensuring that only the most relevant and highest-quality information is passed to the LLM.
       </p>
        <figure class="rag-figure">
-        <img src="reranking_scaled.jpg" alt="ColBERT pipeline illustration">
+        <img src="reranking-scaled.jpg" alt="ColBERT pipeline illustration">
         <figcaption><strong>Figure 1:</strong> End-to-end pipeline of the implemented RAG system.</figcaption>
       </figure>
       <p>Let's look at the process in more detail.</p>
