--- a/projects.html
+++ b/projects.html
@@ -101,21 +101,27 @@
   
   <style>
   .projects-grid {
-    display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-    gap: 1rem;
-    margin-top: 1.5rem;
-  }
+  display: flex;
+  flex-direction: row;
+  gap: 1rem;
+  margin-top: 1.5rem;
+  overflow-x: auto;      /* Enables horizontal scroll if content overflows */
+  scroll-behavior: smooth;
+  padding-bottom: 1rem;
+}
 
-  .project-card {
-    background: #fff;
-    border-radius: 6px;
-    box-shadow: 0 2px 5px rgba(0,0,0,0.1);
-    overflow: hidden;
-    display: flex;
-    flex-direction: column;
-    transition: transform 0.2s;
-  }
+.project-card {
+  flex: 0 0 300px;       /* Fixes each card width */
+  background: #fff;
+  border-radius: 6px;
+  box-shadow: 0 2px 5px rgba(0,0,0,0.1);
+  overflow: hidden;
+  display: flex;
+  flex-direction: column;
+  transition: transform 0.2s;
+}
+
+
 
   .project-card:hover {
     transform: translateY(-3px);
