--- a/projects.html
+++ b/projects.html
@@ -111,51 +111,51 @@
 }
 
 .project-card {
-  flex: 0 0 300px;       /* Fixes each card width */
-  background: #fff;
-  border-radius: 6px;
-  box-shadow: 0 2px 5px rgba(0,0,0,0.1);
-  overflow: hidden;
   display: flex;
-  flex-direction: column;
-  transition: transform 0.2s;
+  flex-direction: row; /* horizontal alignment */
+  align-items: center;
+  gap: 1.5rem;
+  background: #fff;
+  border-radius: 10px;
+  box-shadow: 0 3px 8px rgba(0,0,0,0.1);
+  padding: 1rem;
+  margin-bottom: 1.5rem;
+  transition: transform 0.2s ease;
 }
 
+.project-card:hover {
+  transform: translateY(-4px);
+}
 
+.project-card img {
+  width: 250px;
+  height: 180px;
+  object-fit: cover;
+  border-radius: 8px;
+  background: #f0f0f0;
+}
 
-  .project-card:hover {
-    transform: translateY(-3px);
-  }
+.card-content {
+  flex: 1;
+}
 
-  .project-card img {
-    width: 100%;
-    height: 100px; /* reduced from 150px */
-    object-fit: contain;
-    background: #f0f0f0;
-  }
+.card-title {
+  font-size: 1.2rem;
+  font-weight: 600;
+  margin-bottom: 0.4rem;
+}
 
-  .card-content {
-    padding: 0.75rem;
-    flex: 1;
-  }
+.card-desc {
+  font-size: 0.95rem;
+  color: #555;
+  margin-bottom: 0.6rem;
+}
 
-  .card-title {
-    font-size: 1rem; /* reduced from 1.2rem */
-    font-weight: 600;
-    margin-bottom: 0.3rem;
-  }
+.card-footer {
+  display: flex;
+  justify-content: flex-start;
+}
 
-  .card-desc {
-    font-size: 0.85rem; /* reduced from 0.95rem */
-    color: #555;
-  }
-
-  .card-footer {
-    padding: 0.5rem 0.75rem;
-    border-top: 1px solid #eee;
-    display: flex;
-    justify-content: flex-end;
-  }
 
   .icon {
     color: #8000ff;
