--- a/projects.html
+++ b/projects.html
@@ -102,24 +102,24 @@
   <style>
   .projects-grid {
   display: flex;
-  flex-direction: row;
-  gap: 1rem;
+  flex-direction: column; /* stack each project vertically */
+  gap: 2rem;
   margin-top: 1.5rem;
-  overflow-x: auto;      /* Enables horizontal scroll if content overflows */
-  scroll-behavior: smooth;
-  padding-bottom: 1rem;
+  width: 100%;
 }
 
 .project-card {
   display: flex;
-  flex-direction: row; /* horizontal alignment */
+  flex-direction: row; /* horizontal layout: image left, text right */
   align-items: center;
-  gap: 1.5rem;
+  gap: 2rem;
   background: #fff;
   border-radius: 10px;
   box-shadow: 0 3px 8px rgba(0,0,0,0.1);
-  padding: 1rem;
-  margin-bottom: 1.5rem;
+  padding: 1.5rem;
+  width: 100%;
+  max-width: 1000px;
+  margin: 0 auto;
   transition: transform 0.2s ease;
 }
 
@@ -128,15 +128,18 @@
 }
 
 .project-card img {
-  width: 250px;
+  width: 280px;
   height: 180px;
   object-fit: cover;
   border-radius: 8px;
-  background: #f0f0f0;
+  flex-shrink: 0;
 }
 
 .card-content {
   flex: 1;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
 }
 
 .card-title {
