--- a/projects.html
+++ b/projects.html
@@ -66,13 +66,14 @@
     "mainEntity": {
       "@type": "ItemList",
       "itemListElement": [
-        {
+         {
           "@type": "ListItem",
           "position": 1,
-          "name": "ContraFusionNet",
-          "description": "Weakly supervised Semantic Segmentation",
-          "url": "https://github.com/MargiPandya27/ContraFusionNet"
-        },
+          "name": "Fine-tuning BLIP-2 on BDD100K for Scene Captioning",
+          "description": "This project fine-tunes BLIP-2 (OPT-2.7B) on the BDD100K dataset to generate rich semantic captions describing driving scenes.",
+          "url": "https://github.com/MargiPandya27/Blip2_Finetuning_Scene_Captioning"
+        }
+    
         {
           "@type": "ListItem",
           "position": 2,
@@ -87,13 +88,6 @@
           "description": "A Retrieval-Augmented Generation system for academic research papers",
           "url": "https://github.com/MargiPandya27/RAG_for_Research_Papers"
         },
-        {
-          "@type": "ListItem",
-          "position": 4,
-          "name": "AI-Based Campaign Creator",
-          "description": "MVP for automating digital ad campaigns using LLMs",
-          "url": "https://github.com/MargiPandya27/AI-Based-Campaign-Creator"
-        }
       ]
     }
   }
