--- a/projects.html
+++ b/projects.html
@@ -232,13 +232,13 @@
     <div class="projects-grid">
 
     <div class="project-card">
-      <img src="https://raw.githubusercontent.com/MargiPandya27/ContraFusionNet/main/Images/MA.png" alt="ContraFusionNet">
+      <img src="https://github.githubassets.com/images/modules/logos_page/GitHub-Mark.png" alt="TurtleArt">
       <div class="card-content">
-        <div class="card-title">ContraFusionNet</div>
-        <div class="card-desc">Weakly supervised Semantic Segmentation</div>
+        <div class="card-title">Fine-tuning BLIP-2 on BDD100K for Scene Captioning</div>
+        <div class="card-desc">This project fine-tunes BLIP-2 (OPT-2.7B) on the BDD100K dataset to generate rich semantic captions describing driving scenes.</div>
       </div>
       <div class="card-footer">
-        <a class="icon" href="https://github.com/MargiPandya27/ContraFusionNet" target="_blank">🌐</a>
+        <a class="icon" href="https://github.com/MargiPandya27/Blip2_Finetuning_Scene_Captioning" target="_blank">🌐</a>
       </div>
     </div>
     
