--- a/projects.html
+++ b/projects.html
@@ -250,10 +250,10 @@
 
     
     <div class="project-card">
-      <img src="https://github.com/MargiPandya27/MargiPandya/blob/main/images/Image_to_TurtleGraphics_pic.png" alt="TurtleArt">
+      <img src="https://raw.githubusercontent.com/MargiPandya27/MargiPandya/main/images/Image_to_TurtleGraphics_pic.png" alt="TurtleArt">
       <div class="card-content">
-        <div class="card-title">Multi-Agent System for Image to Turtle Code Generation</div>
-        <div class="card-desc">Generates turtle graphics from real images using contour detection and SVG tracing.</div>
+        <div class="card-title">FloraFlow — Agentic LLM Pipeline for Iterative Flower Rendering</div>
+        <div class="card-desc">Built an LLM-driven pipeline that generates and iteratively improves Python Turtle drawings from real flower images using modular agents, visual evaluation loops, and diffusion-based refinement.</div>
       </div>
       <div class="card-footer">
         <a class="icon" href="https://github.com/MargiPandya27/Image_to_TurtleGraphics" target="_blank">🌐</a>
