Update publication title and add URL details

--- a/publications.html
+++ b/publications.html
@@ -69,9 +69,13 @@
         {
           "@type": "ListItem",
           "position": 1,
-          "name": "Contrastive Fusion of Transformer and CNN based Deep Features for Semantic Segmentation",
+          "name": "Deep Features Based on Contrastive Fusion of Transformer and CNN for Semantic Segmentation",
           "description": "Accepted at IEEE ICIP Workshops 2025",
-          "author": ["Margi Pandya", "Tushar Sandhan"]
+          "author": ["Margi Pandya", "Tushar Sandhan"],
+          "url": "https://drive.google.com/file/d/1KcDv_WLIbufTwqImiq3TWwwJMtrKBTWj/view?usp=drive_link", 
+          "sameAs": [
+            "https://drive.google.com/file/d/1bViptkpToCrvHdahEPXQyt6tIPmeeIor/view"
+          ]
         },
         {
           "@type": "ListItem",
