Revise publication entry for ICIP 2025
Updated publication details with new title, authors, and links.

--- a/publications.html
+++ b/publications.html
@@ -193,7 +193,14 @@
     
 <ol>
 <li>
-<p><strong>Contrastive Fusion of Transformer and CNN based Deep Features for Semantic Segmentation</strong><br /> <strong>Margi Pandya</strong>, Tushar Sandhan<br /> <em>Accepted at the Workshops of the IEEE International Conference on Image Processing</em> (<strong>ICIP</strong>), 2025<br /> </li>
+  <p>
+    <strong>Deep Features Based on Contrastive Fusion of Transformer and CNN for Semantic Segmentation</strong><br>
+    <strong>Margi Pandya</strong>, Tushar Sandhan<br>
+    <em>Accepted at the Workshops of the IEEE International Conference on Image Processing</em> (<strong>ICIP</strong>), 2025<br>
+    <a href="https://drive.google.com/file/d/1KcDv_WLIbufTwqImiq3TWwwJMtrKBTWj/view?usp=drive_link="_blank">[Paper]</a>
+    <a href="https://drive.google.com/file/d/1bViptkpToCrvHdahEPXQyt6tIPmeeIor/view" target="_blank">[Poster]</a>
+  </p>
+</li>
 
 <li>
   <p>
